--- a/trunk/diamandas/pages/templates/feed/content_rss.html
+++ b/trunk/diamandas/pages/templates/feed/content_rss.html
@@ -2,7 +2,7 @@
 <item>
 <guid>{{ domain }}/w/p/{{ slug }}/</guid>
 <link>{{ domain }}/w/p/{{ slug }}/</link>
-<title>{{ title }}</title>
+<title><![CDATA[{{ title }}]]></title>
 <description><![CDATA[{% if is_update %}<b>{% trans "Update" %}</b>: {{ changes }}<br />{% endif %}{{ description|safe }}]]></description>
 <pubDate>{{ date }}</pubDate>
 </item>
