--- a/trunk/diamandas/pages/templates/feed/forum_rss.html
+++ b/trunk/diamandas/pages/templates/feed/forum_rss.html
@@ -1,7 +1,7 @@
 <item>
 <guid>{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</guid>
 <link>{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</link>
-<title>{{ prefix }}{{ title }}</title>
+<title><![CDATA[{{ prefix }}{{ title }}]]></title>
 <description><![CDATA[{{ description|safe }}]]></description>
 <pubDate>{{ date }}</pubDate>
 </item>
