--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/edit_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/edit_post.html
@@ -1,25 +1,9 @@
 {% extends "pages/body.html" %}
 {% load i18n %}
 {% load fbc %}
+{% block meta %}<link rel="stylesheet" href="/site_media/layout/forum.css" type="text/css" />{% endblock %}
+
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a> > <a href="/forum/forum/{{ forum.id }}/">{{ forum.name }}</a> > <a href="/forum/topic/{{ topic.last_pagination_page }}/{{ topic.id }}/">{{ topic.name }}</a>{% endblock %}
-
-{% block meta %}
-<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/skins/simple/style.css" />
-<link rel="stylesheet" type="text/css" href="/site_media/layout/markitup/sets/bbcode/style.css" />
-<script type="text/javascript" src="/site_media/layout/markitup/jquery.markitup.pack.js"></script>
-<script type="text/javascript" src="/site_media/layout/markitup/sets/bbcode/set.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function()    {
-    $('#bbcode').markItUp(myBbcodeSettings);
-
-    $('#emoticons a').click(function() {
-        emoticon = $(this).attr("title");
-        $.markItUp( { replaceWith:emoticon } );
-    });
-});
-</script>
-{% endblock %}
 
 {% block content %}
 <form method="post" action="/forum/edit_post/{{ post_id }}/">
@@ -29,15 +13,10 @@ $(document).ready(function()    {
 		<strong>{% trans "Content" %}</strong>
 	</div>
 	<div class="rightpostform">
-		<div id="emoticons"><a name="c"></a>
-				<a href="#c" title=" :( "><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-unhappy.png" alt="" /></a>
-				<a href="#c" title=" :o "><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-surprised.png" alt="" /></a>
-				<a href="#c" title=" :p "><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-tongue.png" alt="" /></a>
-				<a href="#c" title=" ;) "><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-wink.png" alt="" /></a>
-				<a href="#c" title=" :D "><img src="/site_media/layout/markitup/sets/bbcode/images/emoticon-smile.png" alt="" /></a>
-			</div>
-	      <textarea name="text" id="bbcode" rows="6" cols="60">{{ text }}</textarea>
+		<a name="c"></a>
+	      <textarea name="text" rows="6" cols="60">{{ text }}</textarea>
                     {% if form.text.errors %}<br />*** {{ form.text.errors|join:", " }}{% endif %}
+                    <div><b>{% trans "Available Tags" %}</b>: [b], [u], [i], [code]. [python], [php], [url], [img], [quote]</div>
 	</div>
         <div class="leftpostform">
 	</div>
