--- a/trunk/diamandas/userpanel/templates/userpanel/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login.html
@@ -7,30 +7,26 @@
 <li>{% trans "If you forgotten your password, then you can" %} <a href="/user/password_reset/"><b>{% trans "reset it" %}</b></a>.</li>
 </ul>
 
-{% if form.has_errors %}
+{% if form.errors %}
 <div class="errmsg">{% trans "Your username and password didn't match. Please try again." %}</div>
 {% endif %}
 
 <form method="post" action="/user/login/">
-<div class="content">
 <table>
-<tr><th colspan="2" class="first"><strong>{% trans "Standard login" %}</strong></th></tr>
-<tr class="rowA small"><td class="first" style="width:30%;"><label for="id_username">{% trans "Username" %}:</label></td><td>{{ form.username }}</td></tr>
-<tr class="rowB small"><td class="first"><label for="id_password">{% trans "Password" %}:</label></td><td>{{ form.password }}</td></tr>
-<tr class="rowA small"><td class="first" colspan="2"><input type="submit" value="{% trans "Login" %}"></td></tr>
+<tr><th colspan="2">{% trans "Standard login" %}</th></tr>
+<tr><td style="width:30%;"><label for="id_username">{% trans "Username" %}:</label></td><td>{{ form.username }}</td></tr>
+<tr><td><label for="id_password">{% trans "Password" %}:</label></td><td>{{ form.password }}</td></tr>
+<tr><td></td><td><input type="submit" value="{% trans "Login" %}"></td></tr>
 </table>
 <input type="hidden" name="next" value="{{ next }}" />
-</div>
 </form>
 <br />
 <form method="post" action="/openid/">
-<div class="content">
 <table>
-<tr><th colspan="2" class="first"><strong>{% trans "OpenID" %}</strong></th></tr>
-<tr class="rowA small"><td class="first" style="width:30%;"><label for="openid_url"><img src="/site_media/layout/openid.png" alt="openID" /></label></td><td><input class="openid" type="text" name="openid_url" id="openid_url"></td></tr>
-<tr class="rowB small"><td class="first" colspan="2"><input type="submit" value="{% trans "Login" %}"></td></tr>
+<tr><th colspan="2">{% trans "OpenID" %}</th></tr>
+<tr><td style="width:30%;"><label for="openid_url"><img src="/site_media/layout/openid.png" alt="openID" /></label></td><td><input class="openid" type="text" name="openid_url" id="openid_url"></td></tr>
+<tr><td></td><td><input type="submit" value="{% trans "Login" %}"></td></tr>
 </table>
-</div>
 </form>
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
