--- a/trunk/diamandas/userpanel/templates/userpanel/password_change.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_change.html
@@ -6,15 +6,13 @@
 <div class="errmsg">{% trans "There was a problem with password change. Did you entered correct current password?" %}</div>
 {% endif %}
 
-<form method="post" action=".">
-<div class="content">
-<table style="width:50%;">
-<tr class="rowA"><td class="first"><strong>{% trans "Current Password" %}</strong>:</td><td>{{ form.old_password }}</td></tr>
-<tr class="rowB"><td class="first"><strong>{% trans "New Password" %}</strong>:</td><td>{{ form.new_password1 }}</td></tr>
-<tr class="rowA"><td class="first"><strong>{% trans "New Password again" %}</strong>:</td><td>{{ form.new_password2 }}</td></tr>
+<form method="post" action="">
+<table>
+<tr><td class="first"><strong>{% trans "Current Password" %}</strong>:</td><td>{{ form.old_password }}</td></tr>
+<tr><td class="first"><strong>{% trans "New Password" %}</strong>:</td><td>{{ form.new_password1 }}</td></tr>
+<tr><td class="first"><strong>{% trans "New Password again" %}</strong>:</td><td>{{ form.new_password2 }}</td></tr>
+<tr><td class="first"> </td><td><input type="submit" value="{% trans "Change Password" %}"></td></tr>
 </table>
-</div>
-<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Change Password" %}"></div><br /></div>
 </form>
 
 {% endblock %}
