--- a/trunk/diamandas/userpanel/templates/userpanel/register.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register.html
@@ -3,33 +3,33 @@
 {% block content %}
 <h2>{% trans "Register" %}</h2>
 <form action="." method="post"><input type="hidden" value="{{ token }}" name="token" />
-<div class="content">
-          <table style="width:50%;">
-            <tr class="rowA">
-              <td class="first" style="width:35%;"><b>{% trans "Login" %}</b></td>
+          <table>
+            <tr>
+              <td style="width:35%;">{% trans "Login" %}</td>
               <td>{{ form.login }}{% if form.login.errors %}<div class="errmsg">{{ form.login.errors|join:", " }}</div>{% endif %}</td>
             </tr>
-            <tr class="rowB">
-              <td class="first"><b>{% trans "Password" %}</b></td>
+            <tr>
+              <td>{% trans "Password" %}</td>
               <td>{{ form.password1 }}{% if form.password1.errors %}<div class="errmsg">{{ form.password1.errors|join:", " }}</div>{% endif %}</td>
             </tr>
-            <tr class="rowA">
-              <td class="first"><b>{% trans "Password Again" %}</b></td>
+            <tr>
+              <td>{% trans "Password Again" %}</td>
               <td>{{ form.password2 }}{% if form.password2.errors %}<div class="errmsg">{{ form.password2.errors|join:", " }}</div>{% endif %}</td>
             </tr>
-            <tr class="rowB">
-              <td class="first"><b>{% trans "Email" %}</b></td>
+            <tr>
+              <td>{% trans "Email" %}</td>
               <td>{{ form.email }}{% if form.email.errors %}<div class="errmsg">{{ form.email.errors|join:", " }}</div>{% endif %}</td>
             </tr>
-            <tr class="rowA">
-              <td class="first"><b>{% trans "What's the answer?" %}</b></td>
-              <td>	<b>{{ question }}</b><br />
+            <tr>
+              <td>{% trans "What's the answer?" %}</td>
+              <td>	{{ question }}<br />
 			{{ form.reply }}{% if form.reply.errors %}<div class="errmsg">{{ form.reply.errors|join:", " }}</div>{% endif %}<br /></td>
             </tr>
+	    <tr>
+              <td style="width:35%;"></td>
+              <td><input type="submit" value="{% trans "Register My" %}"></td>
+            </tr>
           </table>
-</div>
-
-<br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Register My" %}"></div><br /></div>
 </form>
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
