--- a/trunk/site_media/layout/style.css
+++ b/trunk/site_media/layout/style.css
@@ -2,11 +2,14 @@ body
 {
 margin:0px;
 padding:0px;
-font-size:0.9em;
+font-size:0.85em;
 font-family:Verdana, Tahoma, Arial, "DejaVu Sans";
-line-height: 1.4em;
+line-height: 1.6em;
 }
-
+img
+{
+border:0px;
+}
 /* Top header styles  */
 #head
 {
@@ -101,6 +104,7 @@ top:-10px;
 width: 96%;
 padding: 5px 2%;
 float: left;
+font-size:0.95em;
 }
 .content h1
 {
@@ -109,6 +113,7 @@ font-size:20px;
 font-weight:bold;
 margin-bottom:5px;
 overflow:hidden;
+padding-bottom:2px;
 }
 .content h2
 {
@@ -117,6 +122,7 @@ font-size:18px;
 font-weight:bold;
 margin-bottom:5px;
 overflow:hidden;
+padding-bottom:2px;
 }
 .content h3
 {
@@ -125,6 +131,7 @@ font-size:16px;
 font-weight:bold;
 margin-bottom:5px;
 overflow:hidden;
+padding-bottom:2px;
 }
 .content h4
 {
@@ -133,22 +140,32 @@ font-size:14px;
 font-weight:bold;
 margin-bottom:5px;
 overflow:hidden;
+padding-bottom:2px;
 }
-
+h4 a, h3 a, h2 a, h1 a
+{
+text-decoration:none;
+}
 
 #crumb
 {
-font-size:0.8em !important;
 font-weight:bold;
-margin-left:20px;
+font-size:0.9em;
+margin:10px;
+margin-bottom:20px;
+padding:5px;
+padding-left:35px;
+background-image:url(forum/normal.png);
+background-repeat:no-repeat;
+background-position:1% 50%;
+border-bottom:1px solid #4993DC;
 }
 
 #panelWrapper
 {
 margin-top:10px;
-background-color:#EEEEEE;
 float:right;
-width:18%;
+width:19%;
 }
 #panelWrapperMainPage
 {
@@ -158,7 +175,7 @@ float:right;
 width:58%;
 }
 
-.panel
+.panelindex
 {
 border:1px solid #3c78b5;
 background-color:white;
@@ -166,10 +183,22 @@ position:relative;
 left:-10px;
 top:-10px;
 padding:5px;
-font-size:0.85em;
+font-size:0.95em;
+}
+
+.panel
+{
+border:1px solid #3c78b5;
+background-color:white;
+padding:5px;
+font-size:0.95em;
 margin-bottom:10px;
 }
 
+.panel a
+{
+font-weight:bold;
+}
 .panel #docactive
 {
 font-weight:bold;
@@ -254,7 +283,7 @@ color: white;
 table {
 	border-collapse: collapse;
 	margin: 10px 15px;
-	width:95%;
+	width:100%;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -280,45 +309,6 @@ td {
 	padding-right: 12px;
 	border: 1px solid #E5F0FB; 
 }
-/* forum table  */
-.content tr.small
-{
-	font-size:11px;
-	background: #E3E3E3;
-}
-.content tr.small_solved
-{
-	font-size:11px;
-	background-color: #D6D6D6;
-	color:#494949;
-}
-.content tr.small_prefixes
-{
-	font-size:11px;
-	background-color: #184A67;
-	color:white;
-}
-.content tr.small_prefixes input
-{
-	width:auto;
-	background-color: #143D55;
-	color:white;
-	border: 1px solid #0B2330;
-}
-.content tr.small_prefixes form
-{
-	display:inline;
-	padding-right:6px;
-}
-.content tr.small_prefixes a
-{
-	color:white !important;
-}
-
-.content tr.small_solved a
-{
-	color:#494949 !important;
-}
 
 /*  */
 blockquote
@@ -337,22 +327,21 @@ margin-left:15px;
 /*
 Styles for the what's new Feed
  */
-.panel h3
+.panelindex h3
 {
-border-bottom:3px solid #568EB6;
+border-bottom:3px solid #D6D6D6;
 font-size:16px;
 font-weight:bold;
-margin-bottom:5px;
+margin:0px;
 overflow:hidden;
-margin-bottom:5px;
 padding:2px;
 }
 dl
 {
 margin-bottom:2px;
-color:gray;
+color:#3E3E3E;
 background-color:#F5F7F1;
-border:1px solid #F5F7F1;
+border:1px solid #D6D6D6;
 font-size:0.8em;
 }
 dt
@@ -368,10 +357,27 @@ margin:0px;
 overflow:hidden;
 background-color:white;
 }
+
 #feed ul
 {
 margin:0px;
 padding:0px;
+}
+#endfeed
+{
+text-align:center;
+font-weight:bold;
+margin-top:10px;
+}
+#endfeed a
+{
+font-size:1.1em;
+padding-right:10px;
+}
+
+#feed a
+{
+font-size:1.1em;
 }
 #feed li
 {
@@ -384,10 +390,17 @@ border-bottom:1px solid #F5F7F1;
 {
 border-bottom:0px;
 }
+#feed dl:first-child
+{
+margin-top:0px;
+}
+.post2
+{
+text-align:right;
+}
 .forum
 {
 display:block;
-font-size:1.3em !important;
 padding-left:27px;
 background-image:url(reply.png);
 background-repeat:no-repeat;
@@ -396,20 +409,20 @@ background-position:1% 50%;
 .news
 {
 display:block;
-font-size:1.3em !important;
 padding-left:27px;
 background-image:url(news.png);
 background-repeat:no-repeat;
 background-position:1% 50%;
+font-weight:bold;
 }
 .art
 {
 display:block;
-font-size:1.3em !important;
 padding-left:27px;
 background-image:url(cbc/page.png);
 background-repeat:no-repeat;
 background-position:1% 50%;
+font-weight:bold;
 }
 /*  */
 
@@ -459,6 +472,7 @@ font-size:0.85em !important;
 	border:1px solid #3C78B5;
 	background:#F5F7F1;
 	padding:4px;
+	font-size:0.85em;
 }
 .content_float
 {
@@ -471,22 +485,76 @@ font-size:0.85em !important;
 .book
 {
 list-style-image: url(cbc/book.png);
-padding-left:4px;
 }
 .page
 {
 list-style-image: url(cbc/page.png);
-padding-left:4px;
 }
+.pagerss
+{
+list-style-image: url(rss.png);
+}
+.ext
+{
+background-image:url(world.png);
+background-repeat:no-repeat;
+background-position:1% 50%;
+padding-left:22px;
+margin-left:3px;
+}
+.rss
+{
+background-image:url(rss.png);
+background-repeat:no-repeat;
+background-position:1% 50%;
+padding-left:22px;
+margin-left:3px;
+}
+
 input.openid {
   background: url(login-bg.gif) no-repeat;
   background-position: 0 50%;
   padding-left: 20px;
 }
+.msg
+{
+text-align:center;
+font-weight:bold;
+border:1px solid gray;
+background:#F2F2F2;
+padding:5px;
+margin-bottom:5px;
+margin-top:5px;
+}
+.errmsg
+{
+text-align:center;
+font-weight:bold;
+border:1px solid red;
+background:#F2F2F2;
+padding:2px;
+margin:10px;
+}
+.newsbox
+{
+border-bottom:1px dotted gray;
+border-top:1px dotted gray;
+padding:3px;
+margin-bottom:35px;
+margin-top:15px;
+overflow:hidden;
+background-color:#F2F2F2;
+font-size:11px;
+}
+.newsbox li
+{
+display:inline;
+padding-right:15px;
+}
 .box
 {
 border:1px solid gray;
-background:#EEEEEE;
+background-color:#EEEEEE;
 padding:5px;
 margin-bottom:5px;
 margin-top:5px;
@@ -496,141 +564,6 @@ overflow:hidden;
 {
 max-width:100%;
 overflow:auto;
-}
-/* Forun  */
-/*
-Styles for forum
-*/
-#prefixes_submit
-{
-	padding:1px;
-	padding-left:4px;
-	padding-right:4px;
-	margin:0px;
-	margin-left:10px;
-	height:18px;
-	font-size:11px;
-}
-p.toptions
-{
-	margin:0px;
-	color:#494949 !important;
-	float:right;
-	
-}
-p.toptions a
-{
-	color:#494949 !important;
-}
-/* Post CSS */
-.posthead
-{
-	font-size:11px;
-	font-weight:bold;
-	background-color:#143D55;
-	color:white;
-	padding:3px;
-}
-.post
-{
-	border:1px solid #494949;
-	background:#EEEEEE;
-}
-.leftpost
-{
-	float:left;
-	width:160px;
-	background:#EEEEEE;
-	padding:4px;
-
-}
-.rightpost
-{
-	background:#DDDDDD;
-	overflow:auto;
-	padding:4px;
-}
-.rightpost img
-{
-	max-width:100%;
-}
-.leftbottompost
-{
-	float:left;
-	width:160px;
-	background:#EEEEEE;
-	padding:4px;
-	padding-top:5px;
-	font-size:11px;
-}
-.rightbottompost
-{
-	background:#DDDDDD;
-	padding:4px;
-	padding-top:5px;
-	overflow:auto;
-	font-size:11px;
-}
-/*  add post/topic */
-.postform
-{
-	margin: 0 auto 0 auto;
-	width:75%;
-	padding: 5px;
-	padding-left:0px;
-	padding-right: 0px;
-	padding-top: 0px;
-	background:#EEEEEE;
-	border: 1px solid #143D55;
-	font-size:11px;
-}
-.postform input
-{
-	margin-bottom:5px;
-	margin-top: 5px;
-	width:99%;
-	border: 1px solid #143D55;
-}
- .postform textarea
- {
-	width:99%;
-	border: 1px solid #143D55;
- }
-.leftpostform
-{
-	float:left;
-	width:130px;
-	padding:5px;
-}
-.rightpostform
-{
-	overflow:auto;
-	padding:5px;
-}
-.comments
-{
-	text-align:center;
-}
-.comments input
-{
-	width:auto;
-}
-#checkboxes input
-{
-	width:auto;
-	padding-right:15px;
-}
-a.solve
-{
-	background-image:url(solve.png);
-	background-repeat:no-repeat;
-	padding-left:19px;
-}
-a.unsolve
-{
-	background-image:url(unsolve.png);
-	background-repeat:no-repeat;
-	padding-left:19px;
 }
 
 /* pygments, disable highlighing errors */
@@ -655,62 +588,47 @@ border:0px !important;
 border:0px !important;
 }
 
-.code { background: #f8f8f8; }
-.code .c { color: #008800; font-style: italic } /* Comment */
-.code .err { border: 1px solid #FF0000 } /* Error */
-.code .k { color: #AA22FF; font-weight: bold } /* Keyword */
-.code .o { color: #666666 } /* Operator */
-.code .cm { color: #008800; font-style: italic } /* Comment.Multiline */
-.code .cp { color: #008800 } /* Comment.Preproc */
-.code .c1 { color: #008800; font-style: italic } /* Comment.Single */
-.code .cs { color: #008800; font-weight: bold } /* Comment.Special */
-.code .gd { color: #A00000 } /* Generic.Deleted */
-.code .ge { font-style: italic } /* Generic.Emph */
-.code .gr { color: #FF0000 } /* Generic.Error */
-.code .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.code .gi { color: #00A000 } /* Generic.Inserted */
-.code .go { color: #808080 } /* Generic.Output */
-.code .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.code .gs { font-weight: bold } /* Generic.Strong */
-.code .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.code .gt { color: #0040D0 } /* Generic.Traceback */
-.code .kc { color: #AA22FF; font-weight: bold } /* Keyword.Constant */
-.code .kd { color: #AA22FF; font-weight: bold } /* Keyword.Declaration */
-.code .kp { color: #AA22FF } /* Keyword.Pseudo */
-.code .kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
-.code .kt { color: #AA22FF; font-weight: bold } /* Keyword.Type */
-.code .m { color: #666666 } /* Literal.Number */
-.code .s { color: #BB4444 } /* Literal.String */
-.code .na { color: #BB4444 } /* Name.Attribute */
-.code .nb { color: #AA22FF } /* Name.Builtin */
-.code .nc { color: #0000FF } /* Name.Class */
-.code .no { color: #880000 } /* Name.Constant */
-.code .nd { color: #AA22FF } /* Name.Decorator */
-.code .ni { color: #999999; font-weight: bold } /* Name.Entity */
-.code .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.code .nf { color: #00A000 } /* Name.Function */
-.code .nl { color: #A0A000 } /* Name.Label */
-.code .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.code .nt { color: #008000; font-weight: bold } /* Name.Tag */
-.code .nv { color: #B8860B } /* Name.Variable */
-.code .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.code .mf { color: #666666 } /* Literal.Number.Float */
-.code .mh { color: #666666 } /* Literal.Number.Hex */
-.code .mi { color: #666666 } /* Literal.Number.Integer */
-.code .mo { color: #666666 } /* Literal.Number.Oct */
-.code .sb { color: #BB4444 } /* Literal.String.Backtick */
-.code .sc { color: #BB4444 } /* Literal.String.Char */
-.code .sd { color: #BB4444; font-style: italic } /* Literal.String.Doc */
-.code .s2 { color: #BB4444 } /* Literal.String.Double */
-.code .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.code .sh { color: #BB4444 } /* Literal.String.Heredoc */
-.code .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.code .sx { color: #008000 } /* Literal.String.Other */
-.code .sr { color: #BB6688 } /* Literal.String.Regex */
-.code .s1 { color: #BB4444 } /* Literal.String.Single */
-.code .ss { color: #B8860B } /* Literal.String.Symbol */
-.code .bp { color: #AA22FF } /* Name.Builtin.Pseudo */
-.code .vc { color: #B8860B } /* Name.Variable.Class */
-.code .vg { color: #B8860B } /* Name.Variable.Global */
-.code .vi { color: #B8860B } /* Name.Variable.Instance */
-.code .il { color: #666666 } /* Literal.Number.Integer.Long */
+#thumbBox{ /*Outermost DIV for thumbnail viewer*/
+position: absolute;
+left: 0;
+top: 0;
+width: auto;
+padding: 10px;
+padding-bottom: 0;
+background: #313131;
+visibility: hidden;
+z-index: 10;
+cursor: hand;
+cursor: pointer;
+}
+
+#thumbBox .footerbar{ /*Footer DIV of thumbbox that contains "close" link */
+font: bold 16px Tahoma;
+letter-spacing: 5px;
+line-height: 1.1em;
+color: white;
+padding: 5px 0;
+text-align: right;
+}
+
+
+#thumbBox #thumbImage{ /*DIV within thumbbox that holds the enlarged image */
+background-color: white;
+}
+
+#thumbLoading{ /*DIV for showing "loading" status while thumbbox is being generated*/
+position: absolute;
+visibility: hidden;
+border: 1px solid black;
+background-color: #EFEFEF;
+padding: 5px;
+z-index: 5;
+}
+.thumb
+{
+text-align:center;
+}
+.thumb img
+{
+margin:10px;
+}
