--- a/trunk/diamandas/pages/templates/pages/show.html
+++ b/trunk/diamandas/pages/templates/pages/show.html
@@ -1,9 +1,11 @@
 {% extends "pages/body.html" %}
 {% load cbc %}
+{% load fbc %}
 {% load i18n %}
 {% block header %}{{ page.title }}{% endblock %}
 {% block title %}{{ page.title }}{% endblock %}
 {% block description %}{{ page.description }}{% endblock %}
+{% block meta %}{% if add_topic %}<link rel="stylesheet" href="/site_media/layout/forum.css" type="text/css" />{% endif %}{% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a>{% if page.crumb %} > {{ page.crumb|safe }}{% endif %}{% endblock %}
 
 {% block content %}{{ page.text|cbc|safe }}
@@ -11,7 +13,7 @@
 	<li><b>{% trans "Added" %}</b>: {{ page.date|date:"d.m.Y" }} {% trans "by" %} {{ page.author }}</li>
 	{% if add_topic %}<li>
 		{% if page.coment_topic %}
-			<a href="/forum/topic/1/{{ page.coment_topic.id }}/"><b>{% trans "Read comments" %}</b>{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
+			<a href="/forum/topic/1/{{ page.coment_topic.id }}/"><b>{% trans "Read all comments" %}</b>{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
 		{% else %}
 			<a href="?c=ok#c"><b>{% trans "Comments" %}</b>{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
 		{% endif %}
@@ -20,6 +22,26 @@
 </ul>
 {% if add_topic %}
 	{% if show_comment %}
+	{% if comments %}
+		<div id="feed">
+		{% for i in comments %}
+		{% if not i.is_injected_post %}
+		<dl>
+			<dt><b>{% if i.author_anonymous %}~<i>{% endif %}{{ i.author}}{% if i.author_anonymous %}</i>{% endif %}</b></dt>
+			<dd>
+			<ul>
+				<li>
+				{{ i.text|fbc|safe|urlizetrunc:"60" }}
+				</li>
+				<li class="post2">{{ i.date|date:"Y.m.d G:i" }}{% if user.is_staff %} | {{ i.ip }}{% endif %}</li>
+			</ul>
+			</dd>
+		</dl>
+		{% endif %}
+		{% endfor %}
+		</div>
+	{% endif %}
+
 	<form method="post" action=".">
 	<div class="postform">
 		<div class="posthead">{% trans "Add comment" %}</div>
